<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/dashboardFragment"
        android:icon="@drawable/ic_dashboard"
        android:title="@string/dashboard" />

    <item
        android:id="@+id/packagesFragment"
        android:icon="@drawable/ic_packages"
        android:title="@string/packages" />

    <item
        android:id="@+id/inventoryFragment"
        android:icon="@drawable/ic_inventory"
        android:title="@string/inventory" />

    <item
        android:id="@+id/storesFragment"
        android:icon="@drawable/ic_stores"
        android:title="@string/stores" />

    <item
        android:id="@+id/expensesFragment"
        android:icon="@drawable/ic_expenses"
        android:title="@string/expenses" />

    <item
        android:id="@+id/reportsFragment"
        android:icon="@drawable/ic_reports"
        android:title="@string/reports" />

</menu>